Carregando imagens atravez URL

--- a/app/src/main/res/layout/activity_cadastrar_produto.xml
+++ b/app/src/main/res/layout/activity_cadastrar_produto.xml
@@ -9,6 +9,8 @@
     android:layout_margin="@dimen/margem_tela_menu"
     tools:context=".activities.ActivityCadastrarProduto">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,8 +19,12 @@
         android:layout_weight="1"
         >
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <LinearLayout
+
+            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -132,6 +138,38 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/espaco_formulario" />
 
+            <EditText
+                android:id="@+id/editTextUrlFotoPrincipal"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/box_formulario"
+                android:layout_marginTop="@dimen/margem_tela_cadastro"
+                android:layout_marginEnd="@dimen/margem_tela_cadastro"
+                android:layout_marginStart="@dimen/margem_tela_cadastro"
+                android:background="@drawable/box_formulario_background"
+                android:inputType="text"
+                android:hint="@string/formulario_url_principal"
+                android:textSize="@dimen/font_formulario" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/espaco_formulario" />
+
+            <EditText
+                android:id="@+id/editTextUrlFotoSecundaria"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/box_formulario"
+                android:layout_marginStart="@dimen/margem_tela_cadastro"
+                android:layout_marginTop="@dimen/margem_tela_cadastro"
+                android:layout_marginEnd="@dimen/margem_tela_cadastro"
+                android:background="@drawable/box_formulario_background"
+                android:hint="@string/formulario_url_secundaria"
+                android:inputType="text"
+                android:textSize="@dimen/font_formulario" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/espaco_formulario" />
+
             <CheckBox
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -139,11 +177,9 @@
                 android:text="Ativo"
                 android:textColor="@color/fontTelaLogin"/>
 
-
-
-
-
         </LinearLayout>
+
+        </ScrollView>
 
 
     </LinearLayout>
@@ -159,5 +195,7 @@
         android:text="@string/salvar"
         android:textSize="@dimen/font_formulario"
         />
+
+
 
 </LinearLayout>
