--- a/app/src/main/res/layout/layout_produto.xml
+++ b/app/src/main/res/layout/layout_produto.xml
@@ -157,5 +157,32 @@
         android:layout_width="@dimen/espaco_views_horizontal"
         android:layout_height="@dimen/margem_tela_menu" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageViewLayoutFotoPrincipal"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            
+            />
+        <Space
+            android:layout_width="@dimen/espaco_views_horizontal"
+            android:layout_height="10dp" />
+
+        <ImageView
+            android:id="@+id/imageViewLayoutFotoSecundaria"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            />
+
+    </LinearLayout>
+
+    <Space
+        android:layout_width="@dimen/espaco_views_horizontal"
+        android:layout_height="@dimen/margem_tela_menu" />
+
 
 </LinearLayout>
