--- a/app/src/main/res/layout/activity_detalhes_produto.xml
+++ b/app/src/main/res/layout/activity_detalhes_produto.xml
@@ -5,127 +5,168 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context=".activities.ActivityDetalhesProduto">
 
+
+
+
     <LinearLayout
-        android:layout_width="400dp"
-        android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="@dimen/margem_tela_menu">
+
+
+
+        <ImageButton
+            android:id="@+id/imageButtonAnteriorFoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+
+            android:background="@drawable/anterior_24"
+            android:layout_gravity="center_vertical"/>
+
 
         <ImageView
             android:id="@+id/imageViewDetalhesFoto"
-            android:padding="2dp"
-            android:layout_width="380dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/icone_app"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_weight="1"
+            android:scaleType="center"
             android:layout_gravity="center_horizontal"/>
+
+        <ImageButton
+            android:id="@+id/imageButtonProximaFoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/proximo_24"
+            android:layout_gravity="center_vertical"/>
 
     </LinearLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
-
-
-    <LinearLayout
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@drawable/background_tela">
+        android:padding="5dp"
+        android:layout_weight="3"
+        android:gravity="center_horizontal"
+        android:background="@color/colorPrimary"
+        android:numColumns="1">
 
-        <TextView
-            android:id="@+id/textViewDetalhesNome"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nome do Produto"
-            android:textColor="@color/fontTelaLogin"
-            android:gravity="center_horizontal"
-            android:textSize="@dimen/font_preco_carrinho"/>
+            >
+
+            <TextView
+                android:id="@+id/textViewDetalhesNome"
+                android:layout_width="275dp"
+                android:layout_height="wrap_content"
+                android:layout_row="1"
+                android:layout_span="4"
+                android:gravity="center_horizontal"
+                android:text="Nome do Produto"
+                android:textColor="@color/fontTelaLogin"
+                android:textSize="@dimen/font_detalhes_nome" />
 
 
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="right">
+        </TableRow>
+        <TableRow
+            android:layout_width="match_parent">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="R$"
+                android:text="Descrição"
+                android:layout_row="2"
+                android:layout_column="1"
                 android:textColor="@color/fontTelaLogin"
                 android:textSize="@dimen/font_formulario"/>
-
-            <Space
-                android:layout_width="@dimen/espaco_views_horizontal"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/textViewDetalhesPrecoValor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="9.99"
-                android:textColor="@color/fontTelaLogin"
-                android:textSize="@dimen/font_preco_carrinho"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="right">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Quantidade"
-                android:textColor="@color/fontTelaLogin"
-                android:textSize="@dimen/font_formulario"/>
-
-            <Space
-                android:layout_width="@dimen/espaco_views_horizontal"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/textViewDetalhesQuantidadeValor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="99"
-                android:textColor="@color/fontTelaLogin"
-                android:textSize="@dimen/font_preco_carrinho"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="left">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Quantidade"
-                android:textColor="@color/fontTelaLogin"
-                android:textSize="@dimen/font_formulario"/>
-
-            <Space
-                android:layout_width="@dimen/espaco_views_horizontal"
-                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textViewDetalhesDescricao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Descrição"
+                android:layout_row="2"
+                android:layout_column="2"
+                android:text="Produto é um item."
                 android:textColor="@color/fontTelaLogin"
-                android:textSize="@dimen/font_preco_carrinho"/>
+                android:textSize="@dimen/font_detalhes_carrinho"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quantidade"
+                android:layout_column="1"
+                android:textColor="@color/fontTelaLogin"
+                android:textSize="@dimen/font_formulario"/>
 
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/textViewDetalhesQuantidadeValor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="3"
+                android:gravity="right"
+                android:text="99"
+                android:textColor="@color/fontTelaLogin"
+                android:textSize="@dimen/font_detalhes_carrinho"/>
 
-    </LinearLayout>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent">
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Adicionar"
+                android:layout_row="3"
+                android:layout_column="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="R$"
+                android:gravity="right"
+                android:layout_row="3"
+                android:layout_column="2"
+                android:textColor="@color/fontTelaLogin"
+                android:textSize="@dimen/font_formulario"/>
+
+            <TextView
+                android:id="@+id/textViewDetalhesPrecoValor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_row="2"
+                android:layout_column="3"
+                android:gravity="right"
+                android:text="9.99"
+                android:textColor="@color/fontTelaLogin"
+                android:textSize="@dimen/font_preco_detalhes"/>
+
+        </TableRow>
+
+
+
+    </TableLayout>
+
+    </ScrollView>
 
 </LinearLayout>
