--- a/app/src/main/res/layout/layout_cliente.xml
+++ b/app/src/main/res/layout/layout_cliente.xml
@@ -52,6 +52,11 @@
             android:layout_height="wrap_content"
             android:text="@string/cpf" />
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
         <TextView
             android:id="@+id/textViewLayoutClienteCpf"
             android:layout_width="match_parent"
