--- a/app/src/main/res/layout/activity_finalizar_compra.xml
+++ b/app/src/main/res/layout/activity_finalizar_compra.xml
@@ -37,11 +37,77 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/buttonComprar"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/botao_comprar"
-        android:layout_gravity="center|bottom"/>
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/editTextBuscarClienteCarrinho"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:autofillHints=""
+            android:background="@android:color/white"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:textSize="22sp"
+            tools:targetApi="o" />
+
+        <Button
+            android:id="@+id/buttonBuscarClienteCarrinho"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_background"
+            android:text="@string/cliente" />
+
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/listViewClientesCarrinho"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:focusable="true" />
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+
+        <TableRow >
+            <Button
+                android:id="@+id/buttonCarrinhoComprar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Comprar"
+                android:layout_gravity="center|bottom"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="Total"
+                android:textSize="@dimen/font_formulario"
+                android:textColor="@color/color_font_formulario"/>
+
+            <TextView
+                android:id="@+id/textViewValorTotalCompra"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="0.00"
+                android:textSize="@dimen/font_preco_carrinho"
+                android:textColor="@color/fontTelaLogin"/>
+
+        </TableRow>
+
+    </TableLayout>
 
 </LinearLayout>
