Inclusao de data e formatacao do double em moeda

--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@color/bg_tela_login" />
+        android:color="@color/color_box_formulario" />
 
     <corners
         android:radius="5dp"
