--- a/app/src/main/res/layout/activity_cadastrar_produto.xml
+++ b/app/src/main/res/layout/activity_cadastrar_produto.xml
@@ -41,7 +41,11 @@
                 android:layout_marginEnd="@dimen/margem_tela_cadastro"
                 android:layout_marginStart="@dimen/margem_tela_cadastro"
                 android:autofillHints=""
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:hint="@string/nome"
+                android:maxLength="35"
+                android:minEms="4"
                 android:textSize="@dimen/font_formulario"
                 android:background="@drawable/box_formulario_background"
                 android:inputType="textPersonName"/>
@@ -59,23 +63,9 @@
                 android:layout_marginStart="@dimen/margem_tela_cadastro"
                 android:background="@drawable/box_formulario_background"
                 android:inputType="numberSigned"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:hint="@string/formulario_quantidade"
-                android:textSize="@dimen/font_formulario" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/espaco_formulario" />
-
-            <EditText
-                android:id="@+id/editTextDataEntradaProduto"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/box_formulario"
-                android:layout_marginTop="@dimen/margem_tela_cadastro"
-                android:layout_marginEnd="@dimen/margem_tela_cadastro"
-                android:layout_marginStart="@dimen/margem_tela_cadastro"
-                android:background="@drawable/box_formulario_background"
-                android:inputType="date"
-                android:hint="@string/formulario_data"
                 android:textSize="@dimen/font_formulario" />
 
             <Space
@@ -95,6 +85,9 @@
                     android:layout_marginEnd="@dimen/margem_tela_cadastro"
                     android:layout_marginStart="@dimen/margem_tela_cadastro"
                     android:background="@drawable/box_formulario_background"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:maxLength="7"
                     android:hint="@string/formulario_preco_compra"
                     android:inputType="numberDecimal"
                     android:textSize="@dimen/font_formulario" />
@@ -110,8 +103,10 @@
                     android:autofillHints=""
                     android:background="@drawable/box_formulario_background"
                     android:inputType="numberDecimal"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:hint="@string/formulario_preco_venda"
-                    android:maxLength="4"
+                    android:maxLength="7"
                     android:textSize="@dimen/font_formulario" />
 
 
@@ -131,6 +126,10 @@
                 android:layout_marginStart="@dimen/margem_tela_cadastro"
                 android:background="@drawable/box_formulario_background"
                 android:inputType="textWebEditText"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:maxLength="50"
+                android:gravity="top"
                 android:hint="@string/formulario_descricao"
                 android:textSize="@dimen/font_formulario" />
 
@@ -147,6 +146,8 @@
                 android:layout_marginStart="@dimen/margem_tela_cadastro"
                 android:background="@drawable/box_formulario_background"
                 android:inputType="text"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:hint="@string/formulario_url_principal"
                 android:textSize="@dimen/font_formulario" />
 
@@ -163,6 +164,8 @@
                 android:layout_marginEnd="@dimen/margem_tela_cadastro"
                 android:background="@drawable/box_formulario_background"
                 android:hint="@string/formulario_url_secundaria"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:inputType="text"
                 android:textSize="@dimen/font_formulario" />
 
@@ -175,6 +178,7 @@
                 android:layout_height="match_parent"
                 android:id="@+id/checkboxAtivo"
                 android:text="Ativo"
+                android:buttonTint="@color/color_box_formulario"
                 android:textColor="@color/fontTelaLogin"/>
 
         </LinearLayout>
