Layout dos formularios melhorado

--- a/app/src/main/res/layout/activity_cadastrar_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastrar_cliente.xml
@@ -36,6 +36,8 @@
                 android:layout_marginEnd="@dimen/margem_tela_cadastro"
                 android:layout_marginStart="@dimen/margem_tela_cadastro"
                 android:autofillHints=""
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:hint="@string/nome"
                 android:textSize="@dimen/font_formulario"
                 android:background="@drawable/box_formulario_background"
@@ -54,6 +56,8 @@
                 android:layout_marginTop="@dimen/margem_tela_cadastro"
                 android:layout_marginEnd="@dimen/margem_tela_cadastro"
                 android:layout_marginStart="@dimen/margem_tela_cadastro"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:autofillHints=""
                 android:background="@drawable/box_formulario_background"
                 android:ems="10"
@@ -78,6 +82,8 @@
                     android:layout_marginTop="@dimen/margem_tela_cadastro"
                     android:layout_marginEnd="@dimen/margem_tela_cadastro"
                     android:layout_marginStart="@dimen/margem_tela_cadastro"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:autofillHints=""
                     android:background="@drawable/box_formulario_background"
                     android:ems="10"
@@ -93,6 +99,8 @@
                     android:layout_height="@dimen/box_formulario"
                     android:layout_marginTop="@dimen/margem_tela_cadastro"
                     android:layout_marginEnd="@dimen/margem_tela_cadastro"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:autofillHints=""
                     android:background="@drawable/box_formulario_background"
                     android:ems="10"
@@ -118,6 +126,8 @@
                 android:layout_marginEnd="@dimen/margem_tela_cadastro"
                 android:layout_marginStart="@dimen/margem_tela_cadastro"
                 android:autofillHints=""
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:background="@drawable/box_formulario_background"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -137,6 +147,8 @@
                 android:layout_marginEnd="@dimen/margem_tela_cadastro"
                 android:layout_marginStart="@dimen/margem_tela_cadastro"
                 android:autofillHints=""
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:background="@drawable/box_formulario_background"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -156,6 +168,8 @@
                 android:layout_marginEnd="@dimen/margem_tela_cadastro"
                 android:layout_marginStart="@dimen/margem_tela_cadastro"
                 android:autofillHints=""
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:background="@drawable/box_formulario_background"
                 android:ems="10"
                 android:inputType="textPersonName"
