--- a/app/src/main/res/layout/activity_cadastrar_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastrar_usuario.xml
@@ -42,6 +42,8 @@
                     android:autofillHints=""
                     android:hint="@string/nome"
                     android:textSize="@dimen/font_formulario"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:background="@drawable/box_formulario_background"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -59,6 +61,8 @@
                     android:layout_marginEnd="@dimen/margem_tela_cadastro"
                     android:layout_marginStart="@dimen/margem_tela_cadastro"
                     android:autofillHints=""
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:background="@drawable/box_formulario_background"
                     android:ems="10"
                     android:inputType="numberSigned"
@@ -83,6 +87,8 @@
                         android:layout_marginEnd="@dimen/margem_tela_cadastro"
                         android:layout_marginStart="@dimen/margem_tela_cadastro"
                         android:autofillHints=""
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
                         android:background="@drawable/box_formulario_background"
                         android:ems="10"
                         android:hint="@string/rua"
@@ -98,6 +104,8 @@
                         android:layout_marginTop="@dimen/margem_tela_cadastro"
                         android:layout_marginEnd="@dimen/margem_tela_cadastro"
                         android:autofillHints=""
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
                         android:background="@drawable/box_formulario_background"
                         android:ems="10"
                         android:inputType="numberSigned"
@@ -122,6 +130,8 @@
                     android:layout_marginEnd="@dimen/margem_tela_cadastro"
                     android:layout_marginStart="@dimen/margem_tela_cadastro"
                     android:autofillHints=""
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:background="@drawable/box_formulario_background"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -141,6 +151,8 @@
                     android:layout_marginEnd="@dimen/margem_tela_cadastro"
                     android:layout_marginStart="@dimen/margem_tela_cadastro"
                     android:autofillHints=""
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:background="@drawable/box_formulario_background"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -160,6 +172,8 @@
                     android:layout_marginEnd="@dimen/margem_tela_cadastro"
                     android:layout_marginStart="@dimen/margem_tela_cadastro"
                     android:autofillHints=""
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:background="@drawable/box_formulario_background"
                     android:ems="10"
                     android:inputType="textPersonName"
@@ -179,6 +193,8 @@
                     android:layout_marginEnd="@dimen/margem_tela_cadastro"
                     android:layout_marginStart="@dimen/margem_tela_cadastro"
                     android:autofillHints=""
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:background="@drawable/box_formulario_background"
                     android:ems="10"
                     android:inputType="text"
@@ -198,6 +214,8 @@
                     android:layout_marginEnd="@dimen/margem_tela_cadastro"
                     android:layout_marginStart="@dimen/margem_tela_cadastro"
                     android:autofillHints=""
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
                     android:background="@drawable/box_formulario_background"
                     android:ems="10"
                     android:inputType="textPassword"
